other-cel/restrict-controlplane-scheduling/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  tolerations:
  - key: "foo-bar"
    operator: "Exists"
    effect: "NoSchedule"
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    app: myapp
spec:
  tolerations:
  - key: "foo-bar"
    operator: "Exists"
    effect: "NoSchedule"
  - key: "node-role.kubernetes.io/foo-bar"
    operator: "Equal"
    value: "bar"
    effect: "NoExecute"
  containers:
  - name: busybox
    image: busybox:1.35
