other-cel/restrict-controlplane-scheduling/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      tolerations:
      - key: "foo-bar"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/foo-bar"
        operator: "Equal"
        value: "bar"
        effect: "NoExecute"
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          tolerations:
          - key: "node-role.kubernetes.io/foo-bar"
            operator: "Equal"
            value: "bar"
            effect: "NoExecute"
          - key: "foo-bar"
            operator: "Exists"
            effect: "NoSchedule"
          restartPolicy: OnFailure
          containers:
          - name: busybox
            image: busybox:1.35
